# G-

./: CMakeLists.txt  ESPECIFICACION.md  IDE.md  IDE_NUEVAS_FUNCIONES.md  IDE_RAPIDO.md  INDICE.md  INICIO.md  INSTALACION.md  PROYECTO_FINAL.md  README.md  RESUMEN.md  VERIFICACION.md  compilar.bat  compilar.sh  compilar_ide.bat  compilar_ide.sh  ide_main.cpp  main.cpp
ejemplos/: completo.ld  condicionales.ld  fibonacci.ld  for.ld  funciones.ld  hola.ld  logica.ld  operaciones.ld  tablas.ld  textos.ld  while.ld
src/: AST.h  Interprete.cpp  Interprete.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ServidorHTTP.cpp  ServidorHTTP.h  Token.h
